<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Constants -->
    <string name="app_name">SmartPlane</string>
    <string name="minus_infinity">-\u221E</string>
    <string name="not_available">N/A</string>
    <string name="zero_percent">0%</string>
    <string name="social_share_message">I flew #SmartPlane and it was awesome!</string>
    <string name="shareWithPictureMessage">Would you like to add a photo?</string>
    <string name="shareWithPictureYes">Add photo</string>
    <string name="shareWithPictureNo">Just text</string>
    <string name="shareWithPictureCancel">Cancel</string>
    <string name="social_share_success">Sharing successful.</string>
    <string name="social_share_picture_problem">Error while taking picture.</string>
    <string name="social_share_title"> </string>
    <string name="info_softwareLabel">Software:\u0020</string>
    <string name="info_hardwareLabel">Hardware:\u0020</string>
    <string name="info_serialLabel">Serial:\u0020</string>
    <string name="unknown">unknown</string>
    <string name="exitConfirmationMsg">Are you sure you want to exit?</string>
    <string name="battery_charging">CHARGING</string>
    <string name="battery_not_charging">IN USE</string>
    <string name="license_openWM">OpenWeatherMap™</string>

    <!-- Accessibility descriptions -->
    <string name="desc_imgPanel">Control Panel</string>
    <string name="desc_throttleLock">Throttle lock</string>
    <string name="desc_throttleSlider">Throttle Slider</string>
    <string name="desc_throttleNeedle">Throttle Needle</string>
    <string name="desc_fuelNeedle">Fuel Needle</string>
    <string name="desc_signalNeedle">Signal Needle</string>
    <string name="desc_imageHorizon">Image Horizon</string>
    <string name="desc_centralRuler">Central Ruler</string>
    <string name="desc_compass">Compass</string>
    <string name="desc_horizonBorder">Windshield border</string>
    <string name="desc_runway">Runway</string>
    <string name="desc_info">App Info</string>
    <string name="desc_atcOff">Air Traffic Control OFF</string>
    <string name="desc_atcOn">Air Traffic Control ON</string>
    <string name="desc_socialShare">Share Button</string>
    <string name="desc_checklist">Checklist</string>
    <string name="desc_shadow_cover">Shadow cover</string>
    <string name="desc_weather_bg">Weather center background</string>

    <!-- TextViews labels -->
    <string name="label_fuel">FUEL</string>
    <string name="label_signal">SIGNAL</string>
    <string name="label_battery">BATTERY</string>
    <string name="label_signalStrength">dBm</string>
    <string name="label_compass">HDG</string>
    <string name="label_searching">Searching&#8230;</string>
    <string name="label_connecting">Connecting&#8230;</string>
    <string name="label_revRudder">Reverse Rudder</string>
    <string name="label_flightAssist">Flight Assist</string>
    <string name="label_tower">ATC Tower</string>

    <string name="label_w_humidity">Humidity</string>
    <string name="label_w_windspeed">Wind speed</string>
    <string name="label_w_pressure">Pressure</string>
    <string name="label_w_direction">Direction</string>
    <string name="label_w_temperature">Temperature</string>
    <string name="label_w_speedunit">km/h</string>


    <!-- Checklist items -->
    <string name="checklist_title">Flight Checklist</string>
    <string name="checklist_before_title">BEFORE TAKEOFF</string>
    <string name="checklist_after_title">AFTER LANDING</string>
    <string name="checklist_charging_title">CHARGING / REFUELING</string>

    <string name="checklist_before_text">
    \ Check Weather Center\n
    Turn on plane\n
    Connection established\n
    Rudder left/right\n
    Throttle check\n
    Check fuel\n
    Tower on/off
    </string>
    <string name="checklist_after_text">
    \ Check fuel\n
    Turn off plane
    </string>
    <string name="checklist_charging_text">
    \ Turn on plane\n
    Plug in cable\n
    Check LED flashing
    </string>

</resources>
