<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/artificialHorizon"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_above="@id/controlPanel">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/imageHorizon"
            android:layout_width="600dp"
            android:layout_height="650dp"
            android:layout_gravity="center"
            android:clickable="false"
            android:contentDescription="@string/desc_imageHorizon"
            android:scaleType="centerCrop"
            android:src="@drawable/horizon" />

        <ImageView
            android:id="@+id/rulerMiddle"
            android:layout_width="25dp"
            android:layout_height="600dp"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_centralRuler"
            android:scaleType="centerCrop"
            android:src="@drawable/rule_middle" />

        <ImageView
            android:id="@+id/compass"
            android:layout_width="433dp"
            android:layout_height="453dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="-150dp"
            android:contentDescription="@string/desc_compass"
            android:rotation="0"
            android:src="@drawable/compass" />


        <ImageView
            android:id="@+id/runway"
            android:layout_width="180dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/desc_runway"
            android:src="@drawable/runaway_lines" />

        <TextView
            android:id="@+id/txtSearching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_searching"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#2b2b2b"
            android:textSize="30sp" />

        <ProgressBar
            android:id="@+id/searchProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="70dp" />

        <ImageView
            android:id="@+id/socialShare"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right|top"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/desc_socialShare"
            android:src="@drawable/social_share" />

        <ImageView
            android:id="@+id/atcOff"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:layout_gravity="left|bottom"
            android:clickable="false"
            android:contentDescription="@string/desc_atcOff"
            android:src="@drawable/atc_off" />

        <ImageView
            android:id="@+id/atcOn"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:layout_gravity="left|bottom"
            android:clickable="false"
            android:contentDescription="@string/desc_atcOn"
            android:src="@drawable/atc_on"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/horizon_wind_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/very_dark_green"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/horizon_temp_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/very_dark_green"
            android:textSize="16sp"
            android:visibility="gone" />
    </FrameLayout>
</RelativeLayout>
