<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp">

    <RelativeLayout
        android:id="@+id/rudder_setting_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/revRudderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_revRudder"
            android:textSize="@dimen/settings_label_font_size" />

        <Switch
            android:id="@+id/rudderSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:soundEffectsEnabled="true" />
    </RelativeLayout>

    <View
        android:id="@+id/rudder_flAssist_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rudder_setting_item"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="#c0c0c0" />

    <RelativeLayout
        android:id="@+id/flAssist_setting_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rudder_flAssist_line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/flAssistText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_flightAssist"
            android:textSize="@dimen/settings_label_font_size" />

        <Switch
            android:id="@+id/flAssistSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:soundEffectsEnabled="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/appInfoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-5dp"
        android:layout_marginRight="-5dp"
        android:background="@color/dark_green"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/softwareInfoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_softwareLabel" />

        <TextView
            android:id="@+id/hardwareInfoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/softwareInfoData"
            android:text="@string/info_hardwareLabel" />

        <TextView
            android:id="@+id/serialInfoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hardwareInfoData"
            android:text="@string/info_serialLabel" />
    </RelativeLayout>
</RelativeLayout>